--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/ament_cmake_vendor_package
-	previous = 
-	base = 12652b9239f8
+	previous = 12652b9239f8
+	base = f3401c99c074
 	trim = 
 	trimbase = 
