--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/ament_cmake_gen_version_h
-	previous = 
-	base = a3edc82ec02a
+	previous = a3edc82ec02a
+	base = f64bac691174
 	trim = 
 	trimbase = 
