--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/ament_cmake_target_dependencies
-	previous = 
-	base = 498725c80bc5
+	previous = 498725c80bc5
+	base = 68e643f3d433
 	trim = 
 	trimbase = 
