--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/ament_cmake_pytest
-	previous = 
-	base = a04e4cd9b468
+	previous = a04e4cd9b468
+	base = fc3025e155a4
 	trim = 
 	trimbase = 
