--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/ament_cmake
-	previous = 
-	base = bd4ceeb87cc8
+	previous = bd4ceeb87cc8
+	base = ebefdcb508ab
 	trim = 
 	trimbase = 
