--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/ament_cmake_gmock
-	previous = 
-	base = 1f217df3bd28
+	previous = 1f217df3bd28
+	base = 2451662ce572
 	trim = 
 	trimbase = 
