--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/ament_cmake_test
-	previous = 
-	base = 8741f935635e
+	previous = 8741f935635e
+	base = b5c768f3b728
 	trim = 
 	trimbase = 
