--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/ament_cmake_export_interfaces
-	previous = 
-	base = 5539211453bf
+	previous = 5539211453bf
+	base = 90a53374d4e9
 	trim = 
 	trimbase = 
