--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/ament_cmake_gtest
-	previous = 
-	base = 7fac3a94bfc8
+	previous = 7fac3a94bfc8
+	base = 2db3653104b4
 	trim = 
 	trimbase = 
