--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/ament_cmake_export_targets
-	previous = 
-	base = b3d3942b2db9
+	previous = b3d3942b2db9
+	base = 8765fd0eb2e9
 	trim = 
 	trimbase = 
