--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/ament_cmake_export_libraries
-	previous = 
-	base = 8bd1849fe895
+	previous = 8bd1849fe895
+	base = ccf009032ff7
 	trim = 
 	trimbase = 
