--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/ament_cmake_include_directories
-	previous = 
-	base = 4ca409bf3e08
+	previous = 4ca409bf3e08
+	base = b6b2d5af8861
 	trim = 
 	trimbase = 
