--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/ament_cmake_python
-	previous = 
-	base = 991a48a17d69
+	previous = 991a48a17d69
+	base = 338d0cf1619c
 	trim = 
 	trimbase = 
