--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/ament_cmake_libraries
-	previous = 
-	base = 1beb2a6c8361
+	previous = 1beb2a6c8361
+	base = 86ca89a74390
 	trim = 
 	trimbase = 
