--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/ament_cmake_export_dependencies
-	previous = 
-	base = fbc4ffbe490a
+	previous = fbc4ffbe490a
+	base = b9ea5b9b38e5
 	trim = 
 	trimbase = 
