--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/ament_cmake_core
-	previous = 
-	base = 81a12b20e62d
+	previous = 81a12b20e62d
+	base = 0849848d1c39
 	trim = 
 	trimbase = 
