--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/ament_cmake_auto
-	previous = 
-	base = c34e64be2482
+	previous = c34e64be2482
+	base = 89001f60a82d
 	trim = 
 	trimbase = 
