--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/ament_cmake_export_include_directories
-	previous = 
-	base = 22a3ea483940
+	previous = 22a3ea483940
+	base = e6917069116f
 	trim = 
 	trimbase = 
