--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/ament_cmake_google_benchmark
-	previous = 
-	base = c3d239649cd1
+	previous = c3d239649cd1
+	base = 06d439950241
 	trim = 
 	trimbase = 
