--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/ament_cmake_export_link_flags
-	previous = 
-	base = 118b06ff74c6
+	previous = 118b06ff74c6
+	base = ed6b91ba7231
 	trim = 
 	trimbase = 
