--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/ament_cmake_export_definitions
-	previous = 
-	base = d4ec783277f2
+	previous = d4ec783277f2
+	base = 978053cffff7
 	trim = 
 	trimbase = 
