--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/ament_cmake_version
-	previous = 
-	base = 95471352976c
+	previous = 95471352976c
+	base = f5d69bfb67a5
 	trim = 
 	trimbase = 
