--- a/patches.conf
+++ b/patches.conf
@@ -1,5 +1,5 @@
 [patches]
-	parent = release/rolling/ament_cmake_auto
+	parent = release/rolling/ament_cmake_auto/2.3.2-3
 	previous = c34e64be2482
 	base = 1ac65793ed8c
 	trim = 
