--- a/patches.conf
+++ b/patches.conf
@@ -1,5 +1,5 @@
 [patches]
-	parent = release/rolling/ament_cmake_export_dependencies
+	parent = release/rolling/ament_cmake_export_dependencies/2.3.2-3
 	previous = fbc4ffbe490a
 	base = f3fc1e9c0190
 	trim = 
