--- a/patches.conf
+++ b/patches.conf
@@ -1,5 +1,5 @@
 [patches]
-	parent = release/rolling/ament_cmake_export_link_flags
+	parent = release/rolling/ament_cmake_export_link_flags/2.3.2-3
 	previous = 118b06ff74c6
 	base = 5bbc647f6327
 	trim = 
