--- a/patches.conf
+++ b/patches.conf
@@ -1,5 +1,5 @@
 [patches]
-	parent = release/rolling/ament_cmake_vendor_package
+	parent = release/rolling/ament_cmake_vendor_package/2.3.2-3
 	previous = 12652b9239f8
 	base = eb8d2e3174e4
 	trim = 
