--- a/patches.conf
+++ b/patches.conf
@@ -1,5 +1,5 @@
 [patches]
-	parent = release/rolling/ament_cmake_python
+	parent = release/rolling/ament_cmake_python/2.3.2-3
 	previous = 991a48a17d69
 	base = 8f212448190b
 	trim = 
