--- a/patches.conf
+++ b/patches.conf
@@ -1,5 +1,5 @@
 [patches]
-	parent = release/rolling/ament_cmake_pytest
+	parent = release/rolling/ament_cmake_pytest/2.3.2-3
 	previous = a04e4cd9b468
 	base = f61d8598d3b2
 	trim = 
