--- a/patches.conf
+++ b/patches.conf
@@ -1,5 +1,5 @@
 [patches]
-	parent = release/rolling/ament_cmake_export_include_directories
+	parent = release/rolling/ament_cmake_export_include_directories/2.3.2-3
 	previous = 22a3ea483940
 	base = 4d4c6ad37e6b
 	trim = 
