--- a/patches.conf
+++ b/patches.conf
@@ -1,5 +1,5 @@
 [patches]
-	parent = release/rolling/ament_cmake
+	parent = release/rolling/ament_cmake/2.3.2-3
 	previous = bd4ceeb87cc8
 	base = a5d265a74952
 	trim = 
