--- a/patches.conf
+++ b/patches.conf
@@ -1,5 +1,5 @@
 [patches]
-	parent = release/rolling/ament_cmake_export_interfaces
+	parent = release/rolling/ament_cmake_export_interfaces/2.3.2-3
 	previous = 5539211453bf
 	base = 4c6955e76a59
 	trim = 
