--- a/patches.conf
+++ b/patches.conf
@@ -1,5 +1,5 @@
 [patches]
-	parent = release/rolling/ament_cmake_include_directories
+	parent = release/rolling/ament_cmake_include_directories/2.3.2-3
 	previous = 4ca409bf3e08
 	base = d2b5dff3af37
 	trim = 
