--- a/patches.conf
+++ b/patches.conf
@@ -1,5 +1,5 @@
 [patches]
-	parent = release/rolling/ament_cmake_google_benchmark
+	parent = release/rolling/ament_cmake_google_benchmark/2.3.2-3
 	previous = c3d239649cd1
 	base = fab5ee89641d
 	trim = 
