--- a/patches.conf
+++ b/patches.conf
@@ -1,5 +1,5 @@
 [patches]
-	parent = release/rolling/ament_cmake_gen_version_h
+	parent = release/rolling/ament_cmake_gen_version_h/2.3.2-3
 	previous = a3edc82ec02a
 	base = 98367ccfebb1
 	trim = 
