--- a/patches.conf
+++ b/patches.conf
@@ -1,5 +1,5 @@
 [patches]
-	parent = release/rolling/ament_cmake_export_definitions
+	parent = release/rolling/ament_cmake_export_definitions/2.3.2-3
 	previous = d4ec783277f2
 	base = d4dd02708c94
 	trim = 
