--- a/patches.conf
+++ b/patches.conf
@@ -1,5 +1,5 @@
 [patches]
-	parent = release/rolling/ament_cmake_libraries
+	parent = release/rolling/ament_cmake_libraries/2.3.2-3
 	previous = 1beb2a6c8361
 	base = 899ebe4035b8
 	trim = 
