--- a/patches.conf
+++ b/patches.conf
@@ -1,5 +1,5 @@
 [patches]
-	parent = release/rolling/ament_cmake_target_dependencies
+	parent = release/rolling/ament_cmake_target_dependencies/2.3.2-3
 	previous = 498725c80bc5
 	base = 0a5ad0f0edcc
 	trim = 
