--- a/patches.conf
+++ b/patches.conf
@@ -1,5 +1,5 @@
 [patches]
-	parent = release/rolling/ament_cmake_export_libraries
+	parent = release/rolling/ament_cmake_export_libraries/2.3.2-3
 	previous = 8bd1849fe895
 	base = 6696c3a8edf7
 	trim = 
