--- a/patches.conf
+++ b/patches.conf
@@ -1,5 +1,5 @@
 [patches]
-	parent = release/rolling/ament_cmake_test
+	parent = release/rolling/ament_cmake_test/2.3.2-3
 	previous = 8741f935635e
 	base = 9302924d0087
 	trim = 
