--- a/patches.conf
+++ b/patches.conf
@@ -1,5 +1,5 @@
 [patches]
-	parent = release/rolling/ament_cmake_export_targets
+	parent = release/rolling/ament_cmake_export_targets/2.3.2-3
 	previous = b3d3942b2db9
 	base = ba904ce2d75d
 	trim = 
