--- a/patches.conf
+++ b/patches.conf
@@ -1,5 +1,5 @@
 [patches]
-	parent = release/rolling/ament_cmake_core
+	parent = release/rolling/ament_cmake_core/2.3.2-3
 	previous = 81a12b20e62d
 	base = 5e5b3b34bc84
 	trim = 
