--- a/patches.conf
+++ b/patches.conf
@@ -1,5 +1,5 @@
 [patches]
-	parent = release/rolling/ament_cmake_version
+	parent = release/rolling/ament_cmake_version/2.3.2-3
 	previous = 95471352976c
 	base = 123dafc8099d
 	trim = 
