--- a/patches.conf
+++ b/patches.conf
@@ -1,5 +1,5 @@
 [patches]
-	parent = release/rolling/ament_cmake_gtest
+	parent = release/rolling/ament_cmake_gtest/2.3.2-3
 	previous = 7fac3a94bfc8
 	base = 1cb04f41a65c
 	trim = 
