--- a/patches.conf
+++ b/patches.conf
@@ -1,5 +1,5 @@
 [patches]
-	parent = release/rolling/ament_cmake_gmock
+	parent = release/rolling/ament_cmake_gmock/2.3.2-3
 	previous = 1f217df3bd28
 	base = 440cede5ccaf
 	trim = 
